# gemma4_finetuned_packing_evaluation

./: .gitignore  main.py  pyproject.toml
notebooks/: llama_cpp_inference.ipynb
src/gemma4_finetuned_packing_evaluation/: config.py  data.py  evaluator.py  inference.py  load_model.py  metrics.py  reporting.py
