[project]
name = "gemma4-finetuned-packing-evaluation"
version = "0.1.0"
description = "Evaluation of QLoRA fine-tuned Gemma 4 model from HuggingFace"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "datasets>=4.8.4",
    "huggingface-hub>=1.11.0",
    "peft>=0.19.1",
    "torch>=2.11.0",
    "transformers>=5.6.2",
]
