[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gemma4_finetuned_packing_evaluation"]

[project]
name = "gemma4-finetuned-packing-evaluation"
version = "0.2.0"
description = "Evaluation of QLoRA fine-tuned Gemma 4 vs base model on packing list generation"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.3.0",
    "bert-score>=0.3.13",
    "datasets>=3.0.0",
    "google-genai>=1.0.0",
    "huggingface-hub>=0.27.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "peft>=0.14.0",
    "plotly>=5.24.0",
    "pydantic>=2.10.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.66.0",
    "torch>=2.5.0",
    "transformers>=4.47.0",
    "unsloth[cu128-torch250]>=2024.11.4",
]

[project.scripts]
evaluate = "gemma4_finetuned_packing_evaluation.main:main"

[tool.uv.sources]
torch = { index = "pytorch-cuda" }

[[tool.uv.indexes]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
